--- a/css/works.css
+++ b/css/works.css
@@ -224,6 +224,7 @@ main {
 .btn {
 	border: 2px solid var(--primary-yellow);
 	color: var(--primary-yellow);
+	background-color: rgba(249, 200, 70, 0.1);
 	font-size: 1em;
 	line-height: 1;
 	border-radius: 20px;
@@ -442,6 +443,8 @@ main {
 	.menu-icon {
 		display: block;
 		padding: 1.25rem 0 0 1.25rem;
+		color: var(--white);
+		filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.8));
 	}
 
 	.nav {
